force-app/main/default/objects/Applicant_Details__c/Applicant_Details__c.object-meta.xml
<CustomObject>
    <label>Applicant Details</label>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApplicantDetails</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>