force-app/main/default/objects/Applicant_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ApplicantDetails</relationshipLabel>
    <relationshipName>ApplicantDetails</relationshipName>
    <type>Lookup</type>
</CustomField>