force-app/main/default/objects/Applicant_Details__c/fields/Address_Proof__c.field-meta.xml
<CustomField>
    <fullName>Address_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Proof</label>
    <type>Checkbox</type>
</CustomField>