force-app/main/default/objects/Applicant_Details__c/fields/Address_Proof_Document__c.field-meta.xml
<CustomField>
    <fullName>Address_Proof_Document__c</fullName>
    <label>Address Proof Document</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Voter’s ID Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>