force-app/main/default/objects/Applicant_Details__c/fields/Alternate_Mobile_Country_with_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Country_with_Code__c</fullName>
    <label>Alternate Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_With_Codes</valueSetName>
    </valueSet>
</CustomField>