force-app/main/default/objects/Applicant_Details__c/fields/Alternate_Mobile_Number_M__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_Number_M__c</fullName>
    <label>Alternate Mobile Number (M)</label>
    <type>TextArea</type>
</CustomField>