force-app/main/default/objects/Applicant_Details__c/fields/Applicant_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name_Arabic__c</fullName>
    <label>Applicant Name_Arabic</label>
    <length>120</length>
    <type>Text</type>
</CustomField>