force-app/main/default/objects/Applicant_Details__c/fields/Applicant_Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Signing_Order__c</fullName>
    <formula>IF(  ISPICKVAL(Applicant_Number__c, &apos;Primary Applicant&apos;) , 1, IF(ISPICKVAL(Applicant_Number__c, &apos;Second Applicant&apos;), 2, IF(ISPICKVAL(Applicant_Number__c, &apos;Third Applicant&apos;), 3 , IF(ISPICKVAL(Applicant_Number__c, &apos;Fourth Applicant&apos;), 4, 5) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Signing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>