force-app/main/default/objects/Applicant_Details__c/fields/Authorized_Signatory2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory2_Phone__c</fullName>
    <label>Authorized Signatory2 Phone Number</label>
    <type>Phone</type>
</CustomField>