force-app/main/default/objects/Applicant_Details__c/fields/Authorized_Signatory_2__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_2__c</fullName>
    <label>Authorized Signatory 2 Email</label>
    <type>Email</type>
</CustomField>