force-app/main/default/objects/Applicant_Details__c/fields/Authorized_Signatory_3__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_3__c</fullName>
    <label>Authorized Signatory 3 Email</label>
    <type>Email</type>
</CustomField>