force-app/main/default/objects/Applicant_Details__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>IF( AND(MONTH(DOB__c)=MONTH(TODAY()),Day(DOB__c)=Day(TODAY())),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday ?</label>
    <type>Checkbox</type>
</CustomField>