force-app/main/default/objects/Applicant_Details__c/fields/Birthday_Date__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Date__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(DOB__c),DAY(DOB__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Date</label>
    <type>Date</type>
</CustomField>