force-app/main/default/objects/Applicant_Details__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>ApplicantDetails</relationshipLabel>
    <relationshipName>ApplicantDetails</relationshipName>
    <type>Lookup</type>
</CustomField>