force-app/main/default/objects/Applicant_Details__c/fields/Certificate_of_Good_Standing_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Good_Standing_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Good Standing Uploaded</label>
    <type>Checkbox</type>
</CustomField>