force-app/main/default/objects/Applicant_Details__c/fields/Certificate_of_Good_Standing_Verified__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Good_Standing_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Good Standing Verified</label>
    <type>Checkbox</type>
</CustomField>