force-app/main/default/objects/Applicant_Details__c/fields/Certified_copy_of_Article_of_Association__c.field-meta.xml
<CustomField>
    <fullName>Certified_copy_of_Article_of_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified copy of Article of Association</label>
    <type>Checkbox</type>
</CustomField>