force-app/main/default/objects/Applicant_Details__c/fields/Certified_copy_of_Partnership_Deed__c.field-meta.xml
<CustomField>
    <fullName>Certified_copy_of_Partnership_Deed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified copy of Partnership Deed</label>
    <type>Checkbox</type>
</CustomField>