force-app/main/default/objects/Applicant_Details__c/fields/Certified_extract_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Certified_extract_of_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified extract of Registration</label>
    <type>Checkbox</type>
</CustomField>