force-app/main/default/objects/Applicant_Details__c/fields/Copy_of_Authorization_Letter_POA__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Authorization_Letter_POA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Authorization Letter/POA</label>
    <type>Checkbox</type>
</CustomField>