force-app/main/default/objects/Applicant_Details__c/fields/Copy_of_Memorandu_of_Association__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Memorandu_of_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Memorandum of Association</label>
    <type>Checkbox</type>
</CustomField>