force-app/main/default/objects/Applicant_Details__c/fields/Copy_of_Workpermit_Employment_contract__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Workpermit_Employment_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Workpermit / Employment contract</label>
    <type>Checkbox</type>
</CustomField>