force-app/main/default/objects/Applicant_Details__c/fields/DOB_Date__c.field-meta.xml
<CustomField>
    <fullName>DOB_Date__c</fullName>
    <formula>(DAY(DOB__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>