force-app/main/default/objects/Applicant_Details__c/fields/Emirates_ID_Details__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_Details__c</fullName>
    <label>Emirates ID Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>