force-app/main/default/objects/Applicant_Details__c/fields/Emirates_ID_of_Authorized_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID_of_Authorized_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emirates ID of Authorized Uploaded</label>
    <type>Checkbox</type>
</CustomField>