force-app/main/default/objects/Applicant_Details__c/fields/Formatted_Applicant_Name_For_Docgen__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Applicant_Name_For_Docgen__c</fullName>
    <label>Formatted Applicant Name For Docgen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>