force-app/main/default/objects/Applicant_Details__c/fields/Funds_from_NRE_NRO__c.field-meta.xml
<CustomField>
    <fullName>Funds_from_NRE_NRO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Funds from NRE / NRO A/c</label>
    <type>Checkbox</type>
</CustomField>