force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidAlternateMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidAlternateMobileNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidAlternateMobileNumber</label>
    <type>Checkbox</type>
</CustomField>