force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidLandlineNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidLandlineNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidLandlineNumber</label>
    <type>Checkbox</type>
</CustomField>