force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidMobileNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidMobileNumber</label>
    <type>Checkbox</type>
</CustomField>