force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidOfficeNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidOfficeNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidOfficeNumber</label>
    <type>Checkbox</type>
</CustomField>