force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidPOA2ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidPOA2ContactNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidPOA2ContactNumber</label>
    <type>Checkbox</type>
</CustomField>