force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidPOA_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidPOA_2_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidPOA 2 Email</label>
    <type>Checkbox</type>
</CustomField>