force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidPOAContactNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidPOAContactNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidPOAContactNumber</label>
    <type>Checkbox</type>
</CustomField>