force-app/main/default/objects/Applicant_Details__c/fields/Is_ValidSecondaryContactNumber__c.field-meta.xml
<CustomField>
    <fullName>Is_ValidSecondaryContactNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ValidSecondaryContactNumber</label>
    <type>Checkbox</type>
</CustomField>