force-app/main/default/objects/Applicant_Details__c/fields/Landline_Number_E__c.field-meta.xml
<CustomField>
    <fullName>Landline_Number_E__c</fullName>
    <label>Landline Number (E)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>