force-app/main/default/objects/Applicant_Details__c/fields/Landline_Number_wcc__c.field-meta.xml
<CustomField>
    <fullName>Landline_Number_wcc__c</fullName>
    <label>Landline Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>