force-app/main/default/objects/Applicant_Details__c/fields/Letter_Of_Undertaking_Verified__c.field-meta.xml
<CustomField>
    <fullName>Letter_Of_Undertaking_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter of undertaking verified</label>
    <type>Checkbox</type>
</CustomField>