force-app/main/default/objects/Applicant_Details__c/fields/Mailing_Address_Merge__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Merge__c</fullName>
    <formula>TRIM(Mailing_Address__c) + IF(NOT(ISPICKVAL(Mailing_City__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) +  TRIM(TEXT(Mailing_City__c)) + IF(NOT(ISPICKVAL(Mailing_State__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_State__c)) + IF(NOT(ISPICKVAL(Mailing_Country__c,&apos;&apos;)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_Country__c)) + IF(NOT(ISNULL(Mailing_Pincode__c)),&apos;,&apos;,&apos;&apos;) + TRIM(TEXT(Mailing_Pincode__c))</formula>
    <label>Mailing Address Merge</label>
    <type>Text</type>
</CustomField>