force-app/main/default/objects/Applicant_Details__c/fields/Mailing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Pincode__c</fullName>
    <label>Mailing Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>