force-app/main/default/objects/Applicant_Details__c/fields/Memoradum_Articles_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Memoradum_Articles_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memoradum Articles Uploaded</label>
    <type>Checkbox</type>
</CustomField>