force-app/main/default/objects/Applicant_Details__c/fields/Memoradum_Articles_Verified__c.field-meta.xml
<CustomField>
    <fullName>Memoradum_Articles_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memoradum Articles Of Association Verifi</label>
    <type>Checkbox</type>
</CustomField>