force-app/main/default/objects/Applicant_Details__c/fields/Mobile_Country_With_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_With_Code__c</fullName>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_With_Codes</valueSetName>
    </valueSet>
</CustomField>