force-app/main/default/objects/Applicant_Details__c/fields/Mobile_Number_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_Arabic__c</fullName>
    <label>Mobile Number_Arabic</label>
    <type>Phone</type>
</CustomField>