force-app/main/default/objects/Applicant_Details__c/fields/MyID__c.field-meta.xml
<CustomField>
    <fullName>MyID__c</fullName>
    <externalId>true</externalId>
    <label>MyID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>