force-app/main/default/objects/Applicant_Details__c/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>National ID</label>
    <type>Checkbox</type>
</CustomField>